objects/mytest1__c.object
<CustomObject>
    <fields>
        <fullName>Emailfield__c</fullName>
        <description>Test</description>
        <label>Emailfield</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Field1</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>Field2</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>mytest1</label>
    <nameField>
        <label>mytest1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>mytest1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>